# system-monitor

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini
.github/: integration-ci.yaml
.github/workflows/: auto-merge-ci.yml
app/: __init__.py
app/agent/: __init__.py  api.py  main.py  schema.py  telemetry.py
app/container/: __init__.py
app/core/: logging_config.py
app/server/: Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt
app/server/monitoring/: graphql_queries.py  tasks.py  urls.py  views.py
app/server/monitoring/queries/: health_check.graphql  telemetry_basic.graphql  telemetry_extended.graphql
app/server/server_config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: pre-commit-hook.sh  start-dev.sh  test-poll.py
tests/agent/: test_api.py  test_schema.py  test_telemetry.py
tests/server/: test_graphql_queries.py  test_tasks.py  test_views.py
